Test Latex Equations

--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -100,11 +100,15 @@ end
 
 ### And a inline equation
 
-Inline equation: $equation$
+Inline equation: \(\mathcal{M} = \langle \mathcal{S}, \mathcal{A}, \mathcal{P}, \mathcal{R}, \gamma \rangle\)
 
 ### And a display equation
 
-Display equation: $$equation$$
+Display equation: 
+
+\[\mathcal{L}_i(\textbf{w}_i) = \mathbb{E}_{s, a, r, s' \sim \mathcal{D}} \ \Big[ \big( r + \gamma \max_{a'} Q(s', a', \textbf{w}_i^-) - Q(s, a, \textbf{w}_i) \big) ^2 \Big]\]
+
+\[\textbf{w} = \Big( \sum_{t=1}^T \ x(S_t, A_t) \ \big( x(S_t, A_t) - \gamma x(S_{t+1}, \pi(S_{t+1})) \big)^{\top} \Big)^{-1} \ \sum_{t=1}^T x(S_t, A_t) \ R_{t+1}\]
 
 ### Small image
 
