--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -6,6 +6,8 @@ read_time: true
 comments: true
 share: true
 related: true
+classes: wide
+toc: true
 ---
 
 Text can be **bold**, _italic_, or ~~strikethrough~~.
@@ -108,7 +110,7 @@ Display equation:
 
 \\[ \mathcal{L}_i(\textbf{w}_i) = \mathbb{E}_{s, a, r, s' \sim \mathcal{D}} \ \Big[ \big( r + \gamma \max_{a'} Q(s', a', \textbf{w}_i^-) - Q(s, a, \textbf{w}_i) \big) ^2 \Big] \\]
 
-\\[\textbf{w} = \Big( \sum_{t=1}^T \ x(S_t, A_t) \ \big( x(S_t, A_t) - \gamma x(S_{t+1}, \pi(S_{t+1})) \big)^{\top} \Big)^{-1} \ \sum_{t=1}^T x(S_t, A_t) \ R_{t+1} \\]
+\\[ \textbf{w} = \Big( \sum_{t=1}^T \ x(S_t, A_t) \ \big( x(S_t, A_t) - \gamma x(S_{t+1}, \pi(S_{t+1})) \big)^{\top} \Big)^{-1} \ \sum_{t=1}^T x(S_t, A_t) \ R_{t+1} \\]
 
 ### Small image
 
