Test Latex Equations

--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -1,7 +1,7 @@
 ---
 layout: single
 tags: test
-author_profile: true
+author_profile: false
 read_time: true
 comments: true
 share: true
@@ -108,9 +108,9 @@ Inline equation: \\( \mathcal{M} = \langle \mathcal{S}, \mathcal{A}, \mathcal{P}
 
 Display equation: 
 
-\\[ \mathcal{L}_i(\textbf{w}_i) = \mathbb{E}_{s, a, r, s' \sim \mathcal{D}} \ \Big[ \big( r + \gamma \max_{a'} Q(s', a', \textbf{w}_i^-) - Q(s, a, \textbf{w}_i) \big) ^2 \Big] \\]
+$$ \mathcal{L}_i(\textbf{w}_i) = \mathbb{E}_{s, a, r, s' \sim \mathcal{D}} \ \Big[ \big( r + \gamma \max_{a'} Q(s', a', \textbf{w}_i^-) - Q(s, a, \textbf{w}_i) \big) ^2 \Big] $$
 
-\\[ \textbf{w} = \Big( \sum_{t=1}^T \ x(S_t, A_t) \ \big( x(S_t, A_t) - \gamma x(S_{t+1}, \pi(S_{t+1})) \big)^{\top} \Big)^{-1} \ \sum_{t=1}^T x(S_t, A_t) \ R_{t+1} \\]
+$$ \textbf{w} = \Big( \sum_{t=1}^T \ x(S_t, A_t) \ \big( x(S_t, A_t) - \gamma x(S_{t+1}, \pi(S_{t+1})) \big)^{\top} \Big)^{-1} \ \sum_{t=1}^T x(S_t, A_t) \ R_{t+1} $$
 
 ### Small image
 
