--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -1,5 +1,6 @@
 ---
 layout: single
+excerpt_separator: "Here is a Test"
 tags: test
 author_profile: false
 read_time: true
@@ -8,6 +9,8 @@ share: true
 related: true
 classes: wide
 toc: true
+---
+
 ---
 
 Text can be **bold**, _italic_, or ~~strikethrough~~.
