--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -1,17 +1,20 @@
 ---
 layout: single
-excerpt_separator: "Here is a Test"
+excerpt_separator: <!--more-->
 tags: test
-author_profile: false
+author_profile: true
 read_time: true
 comments: true
 share: true
 related: true
-classes: wide
 toc: true
 ---
 
 ---
+
+Here is a Test
+
+<!--more-->
 
 Text can be **bold**, _italic_, or ~~strikethrough~~.
 
