--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -18,7 +18,7 @@ Here is a Test
 
 Text can be **bold**, _italic_, or ~~strikethrough~~.
 
-[Link to another page](./another-page.html).
+[Link to another page]({% post_url 2008-12-03-python3-test %}).
 
 There should be whitespace between paragraphs.
 
