--- a/_posts/2021-10-05-COMP0133-00.md
+++ b/_posts/2021-10-05-COMP0133-00.md
@@ -9,6 +9,10 @@ toc: true
 classes: wide
 ---
 
+UCL Course COMP0133 LEC-00: Introduction to COMP0133
+
+<!--more-->
+
 ---
 ### Distributed Systems
 
