--- a/_posts/2021-11-02-COMP0133-07.md
+++ b/_posts/2021-11-02-COMP0133-07.md
@@ -9,7 +9,8 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 LEC-07: Paxos
+UCL Course COMP0133 Distributed Systems and Security  
+LEC-07: Paxos
 
 <!--more-->
 
