--- a/_posts/2021-12-07-COMP0133-17.md
+++ b/_posts/2021-12-07-COMP0133-17.md
@@ -9,7 +9,8 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 LEC-17: Host-Based Exploit Defenses
+UCL Course COMP0133 Distributed Systems and Security  
+LEC-17: Host-Based Exploit Defenses
 
 <!--more-->
 
