--- a/_posts/2021-10-14-COMP0133-02.md
+++ b/_posts/2021-10-14-COMP0133-02.md
@@ -9,7 +9,8 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 LEC-02: I/O Concurrency
+UCL Course COMP0133 Distributed Systems and Security  
+LEC-02: I/O Concurrency
 
 <!--more-->
 
