--- a/_posts/2021-10-28-COMP0133-06.md
+++ b/_posts/2021-10-28-COMP0133-06.md
@@ -9,7 +9,8 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 LEC-06: Two-Phase Commit
+UCL Course COMP0133 Distributed Systems and Security  
+LEC-06: Two-Phase Commit
 
 <!--more-->
 
