--- a/_posts/2021-11-25-COMP0133-13.md
+++ b/_posts/2021-11-25-COMP0133-13.md
@@ -9,7 +9,8 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 LEC-13: Kerberos
+UCL Course COMP0133 Distributed Systems and Security  
+LEC-13: Kerberos
 
 <!--more-->
 
