--- a/_posts/2021-11-30-COMP0133-14.md
+++ b/_posts/2021-11-30-COMP0133-14.md
@@ -9,7 +9,8 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 LEC-14: SSL/TLS
+UCL Course COMP0133 Distributed Systems and Security  
+LEC-14: SSL/TLS
 
 <!--more-->
 
