--- a/_posts/2021-12-02-COMP0133-16.md
+++ b/_posts/2021-12-02-COMP0133-16.md
@@ -9,7 +9,8 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 LEC-16: Software Vulnerabilities and Exploits
+UCL Course COMP0133 LEC-16: Distributed Systems and Security  
+Software Vulnerabilities and Exploits
 
 <!--more-->
 
