--- a/_posts/2021-10-19-COMP0133-03.md
+++ b/_posts/2021-10-19-COMP0133-03.md
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  
+UCL Course COMP0133 Distributed Systems and Security  <br>
 LEC-03: Network File System
 
 <!--more-->
