--- a/_posts/2021-10-21-COMP0133-04.md
+++ b/_posts/2021-10-21-COMP0133-04.md
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  
+UCL Course COMP0133 Distributed Systems and Security  <br>
 LEC-04: Transparency and RPC
 
 <!--more-->
