--- a/_posts/2021-12-14-COMP0133-20.md
+++ b/_posts/2021-12-14-COMP0133-20.md
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  
+UCL Course COMP0133 Distributed Systems and Security  <br>
 LEC-20: Out-of-Order Execution and Meltdown
 
 <!--more-->
