--- a/_posts/2022-01-18-COMP0143-00-03.md
+++ b/_posts/2022-01-18-COMP0143-00-03.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Cryptography: Hash Function and Merkle Tree"
+title: "Cryptography: Commitment Schemes"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
@@ -10,7 +10,7 @@ classes: wide
 ---
 
 UCL Course COMP0143 Cryptocurrencies  <br>
-LEC-00-01: Prerequisite Cryptography: Hash Function and Merkle Tree
+LEC-00-01: Prerequisite Cryptography: Commitment Schemes
 
 <!--more-->
 
