--- a/_posts/2022-01-25-COMP0143-00-03.md
+++ b/_posts/2022-01-25-COMP0143-00-03.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Cryptography: Hash Function and Merkle Tree"
+title: "Cryptography: Commitment Schemes"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
