--- a/_posts/2022-02-22-COMP0143-01.md
+++ b/_posts/2022-02-22-COMP0143-01.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Cryptography: Commitment Schemes"
+title: "Network Layer"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies  <br>
-LEC-00-01: Prerequisite Cryptography: Commitment Schemes
+UCL Course COMP0143 Cryptocurrencies: LEC-01
 
 <!--more-->
 
