--- a/_posts/2021-10-05-COMP0133-00.md
+++ b/_posts/2021-10-05-COMP0133-00.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-00: Introduction to COMP0133
+UCL Course COMP0133: Distributed Systems and Security LEC-00
 
 <!--more-->
 
