--- a/_posts/2021-10-07-COMP0133-01.md
+++ b/_posts/2021-10-07-COMP0133-01.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-01: Introduction to Operating Systems
+UCL Course COMP0133: Distributed Systems and Security LEC-01
 
 <!--more-->
 
