--- a/_posts/2021-10-19-COMP0133-03.md
+++ b/_posts/2021-10-19-COMP0133-03.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-03: Network File System
+UCL Course COMP0133: Distributed Systems and Security LEC-03
 
 <!--more-->
 
