--- a/_posts/2021-10-26-COMP0133-05.md
+++ b/_posts/2021-10-26-COMP0133-05.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-05: Distributed Shared Memory: Ivy
+UCL Course COMP0133: Distributed Systems and Security LEC-05
 
 <!--more-->
 
