--- a/_posts/2021-11-04-COMP0133-08.md
+++ b/_posts/2021-11-04-COMP0133-08.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-08: Bayou
+UCL Course COMP0133: Distributed Systems and Security LEC-08
 
 <!--more-->
 
