--- a/_posts/2021-11-16-COMP0133-09.md
+++ b/_posts/2021-11-16-COMP0133-09.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-09: Google File System
+UCL Course COMP0133: Distributed Systems and Security LEC-09
 
 <!--more-->
 
