--- a/_posts/2021-11-18-COMP0133-10.md
+++ b/_posts/2021-11-18-COMP0133-10.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-10: Eliminating Receive Livelock
+UCL Course COMP0133: Distributed Systems and Security LEC-10
 
 <!--more-->
 
