--- a/_posts/2021-11-19-COMP0133-11.md
+++ b/_posts/2021-11-19-COMP0133-11.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-11: Introduction to Security
+UCL Course COMP0133: Distributed Systems and Security LEC-11
 
 <!--more-->
 
