--- a/_posts/2021-11-23-COMP0133-12.md
+++ b/_posts/2021-11-23-COMP0133-12.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-12: Cryptographic Primitives
+UCL Course COMP0133: Distributed Systems and Security LEC-12
 
 <!--more-->
 
