--- a/_posts/2021-11-30-COMP0133-15.md
+++ b/_posts/2021-11-30-COMP0133-15.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-15: TAOS
+UCL Course COMP0133: Distributed Systems and Security LEC-15
 
 <!--more-->
 
