--- a/_posts/2021-12-02-COMP0133-16.md
+++ b/_posts/2021-12-02-COMP0133-16.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 LEC-16: Distributed Systems and Security  <br>
-Software Vulnerabilities and Exploits
+UCL Course COMP0133: Distributed Systems and Security LEC-16
 
 <!--more-->
 
