--- a/_posts/2021-12-09-COMP0133-18.md
+++ b/_posts/2021-12-09-COMP0133-18.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-18: Software-Based Fault Isolation
+UCL Course COMP0133: Distributed Systems and Security LEC-18
 
 <!--more-->
 
