--- a/_posts/2021-12-12-COMP0133-19.md
+++ b/_posts/2021-12-12-COMP0133-19.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0133 Distributed Systems and Security  <br>
-LEC-19: OKWS and Least Privilege
+UCL Course COMP0133: Distributed Systems and Security LEC-19
 
 <!--more-->
 
