--- a/_posts/2022-01-18-COMP0143-00-02.md
+++ b/_posts/2022-01-18-COMP0143-00-02.md
@@ -9,8 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies  <br>
-LEC-00-01: Prerequisite Cryptography: Digital Signatures
+UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography
 
 <!--more-->
 
