--- a/_posts/2022-02-01-COMP0143-00-04.md
+++ b/_posts/2022-02-01-COMP0143-00-04.md
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography
+UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part IV
 
 <!--more-->
 
