--- a/_posts/2022-01-11-COMP0143-00-01.md
+++ b/_posts/2022-01-11-COMP0143-00-01.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Cryptography: Hash Function and Merkle Tree"
+title: "Cryptography: Hash Functions and Merkle Trees"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography
+UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part I
 
 <!--more-->
 
