More and more...

--- a/_posts/2022-04-12-COMP0143-08.md
+++ b/_posts/2022-04-12-COMP0143-08.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Blockchain Ecosystem"
+title: "Blockchain Privacy"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
