--- a/_posts/2022-04-26-COMP0143-10.md
+++ b/_posts/2022-04-26-COMP0143-10.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Blockchain Ecosystem"
+title: "Governance and Regulatory"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies: LEC-09
+UCL Course COMP0143 Cryptocurrencies: LEC-10
 
 <!--more-->
 
