--- a/_posts/2022-04-05-COMP0143-07.md
+++ b/_posts/2022-04-05-COMP0143-07.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Blockchain Privacy"
+title: "Blockchain Security"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
