--- a/_posts/1970-01-01-test.md
+++ b/_posts/1970-01-01-test.md
@@ -19,7 +19,7 @@ Here is a Test
 
 Text can be **bold**, _italic_, or ~~strikethrough~~.
 
-[Link to another page]({% post_url 2008-12-03-python3-test %}).
+[Link to another page]({% post_url 2099-12-31-academic-blockchain-papers %}).
 
 There should be whitespace between paragraphs.
 
