--- a/_posts/2022-01-25-COMP0143-00-05.md
+++ b/_posts/2022-01-25-COMP0143-00-05.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Cryptography: Digital Signatures"
+title: "Cryptography: Secret Sharing Schemes"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part II
+UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part V
 
 <!--more-->
 
