--- a/_posts/2022-01-28-COMP0143-00-06.md
+++ b/_posts/2022-01-28-COMP0143-00-06.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Cryptography: Hash Functions"
+title: "Cryptography: Homomorphic Encryption"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part I
+UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part VI
 
 <!--more-->
 
