--- a/_posts/2022-01-14-COMP0143-00-02.md
+++ b/_posts/2022-01-14-COMP0143-00-02.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Cryptography: Commitment Schemes"
+title: "Cryptography: Public Key Encryption"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part III
+UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part II
 
 <!--more-->
 
