--- a/_posts/2022-02-01-COMP0143-00-07.md
+++ b/_posts/2022-02-01-COMP0143-00-07.md
@@ -1,6 +1,6 @@
 ---
 layout: single
-title: "Cryptography: Zero-Knowledge Proofs"
+title: "Cryptography: Secure Multi-Party Computation"
 excerpt_separator: <!--more-->
 tags: UCL-Course COMP0143 Blockchain
 author_profile: true
@@ -9,7 +9,7 @@ toc: true
 classes: wide
 ---
 
-UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part IV
+UCL Course COMP0143 Cryptocurrencies: Prerequisite Cryptography Part VII
 
 <!--more-->
 
